fixing button spacing on search input

--- a/styles/components/_search.scss
+++ b/styles/components/_search.scss
@@ -7,6 +7,12 @@
     padding: 10px 0 0;
 
     &.input-group {
+      button {
+        [class^="icon-"]:before {
+          line-height: 3;
+        }
+      }
+
       .form-control {
         height: 48px;
         padding-right: 35px !important;
